<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_marginTop="10dp"
    android:layout_height="fill_parent">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/forgot_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorWhite">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/forgot_toolbar"
        android:layout_marginBottom="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/src_forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="100dp"
                android:src="@drawable/forgot_password_avatar" />

            <TextView
                android:id="@+id/forgotpassword_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/src_forgotpassword"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/forgot_password_first_text"
                android:textColor="@color/colorBlack"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/forgotpassword_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotpassword_text"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="@string/forgot_password_second_text"
                android:textColor="@color/colorCopyRightText"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/forgot_password_phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/forgotpassword_label"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/text_view_border"
                android:drawableStart="@drawable/ic_phone_18"
                android:drawablePadding="10dp"
                android:hint="@string/login_phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_send_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_below="@+id/forgot_password_phone_number"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/create_wallet_buttons_style"
                android:text="@string/forgot_password_send_button"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="21dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>